--- a/style.css
+++ b/style.css
@@ -75,6 +75,18 @@ h6 {
     isolation: isolate;
 }
 
+input[type="search"] {
+    appearance: none;
+    border-radius: 20px;
+    background-color: rgb(236, 236, 236);
+    width: 700px;
+    height: 35px;
+    border: none;
+    padding: 15px;
+}
+
+
+
 .container {
     width: 100vw;
     height: 100vh;
@@ -85,33 +97,38 @@ h6 {
 
 :root {
     font-size: 16px;
+    overflow-x: hidden;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
-.header,
-.sidebar,
-.main {
-    border: 1px solid black;
-}
 
 .header {
     grid-column: 2;
-    background-color: aliceblue;
+    background-color: rgb(255, 255, 255);
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    padding: 20px 40px;
+    z-index: 10;
+    box-shadow: 2px 2px 6px 1px rgba(206, 206, 206, 0.5);
 }
 
 .sidebar {
-    background-color: rgb(72, 147, 212);
+    background-color: rgb(0, 0, 0);
     grid-column: 1 /2;
     grid-row: 1 / 3;
     color: white;
     font-size: 1rem;
-    padding: 25px;
+    padding: 20px 40px;
+    z-index: 11;
 
 
 }
 
 .sidebar-title {
+
     margin-bottom: 15px;
-    font-size: 0.8rem;
+    font-size: 1rem;
 }
 
 .nav,
@@ -140,16 +157,219 @@ h6 {
     fill: azure;
 }
 
+
 .nav-title {
     height: 35px;
 
 }
 
+.link-icon,
+.header-icon,
 .nav-icon {
-    height: 30px;
+    height: 25px;
 }
 
 a {
     text-decoration: none;
     color: white;
+}
+
+.search {
+    grid-column: 1;
+    display: flex;
+    gap: 15px;
+    align-items: center;
+}
+
+.profile {
+    grid-column: 2;
+    display: flex;
+    justify-content: flex-end;
+    gap: 30px;
+    font-size: 1.2rem;
+    align-items: center;
+    margin-right: 50px;
+
+}
+
+.trending-image>img,
+.profile>img {
+    height: 50px;
+    width: 50px;
+    border-radius: 30px;
+}
+
+.user-info {
+    display: flex;
+    gap: 30px;
+    align-items: center;
+    grid-column: 1;
+    grid-row: 2;
+}
+
+.user-info>img {
+    height: 75px;
+    width: 75px;
+    border-radius: 50px;
+}
+
+.header-buttons {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 30px;
+    grid-column: 2;
+    grid-row: 2;
+
+}
+
+.header-button {
+    width: 110px;
+    height: 40px;
+    border: none;
+    border-radius: 30px;
+    background-color: rgb(0, 0, 0);
+    color: white;
+    font-size: 1.1em;
+    font-weight: bold;
+    text-align: center;
+}
+
+.main {
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+    grid-template-rows: repeat(2, 1fr);
+    z-index: 9;
+}
+
+.content {
+    grid-column: 1;
+    grid-row: 1/3;
+    background-color: rgb(238, 237, 234);
+    padding: 15px;
+
+
+
+}
+
+.side-content>h2,
+.content>h2 {
+    padding: 10px;
+    margin-bottom: 10px;
+}
+
+.cards {
+    display: grid;
+    grid-template-rows: repeat(3, 1fr);
+    grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+    gap: 30px;
+}
+
+.card {
+    background-color: white;
+    padding: 40px;
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+    border-left: 5px solid rgb(197, 117, 51);
+
+    box-shadow: 2px 2px 6px 1px rgba(206, 206, 206, 1);
+
+}
+
+.card-title {
+    font-size: 1.2rem;
+    font-weight: bold;
+}
+
+.card-content {
+    color: rgb(73, 73, 73);
+    font-size: 1rem;
+    width: 75%;
+    flex: 1 1 0;
+}
+
+.card-links {
+    margin-left: auto;
+    display: flex;
+    gap: 15px;
+
+}
+
+.side-content {
+    grid-column: 2;
+    grid-row: 1/3;
+    background-color: rgb(238, 237, 234);
+    padding: 15px;
+}
+
+.announcement-card {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 16px;
+    width: 320px;
+    height: 400px;
+    font-size: 0.9rem;
+    background-color: white;
+    padding: 30px;
+    border-radius: 10px;
+    box-shadow: 2px 2px 6px 1px rgba(206, 206, 206, 1);
+
+}
+
+
+.announcement-content {
+    display: flex;
+    flex-direction: column;
+    border-bottom: 2px solid rgba(206, 206, 206, 0.5);
+    padding-bottom: 10px;
+}
+
+.announcement-content>a {
+    color: black;
+}
+
+.announcement-content>p {
+    color: rgb(73, 73, 73);
+
+}
+
+.announcement-card div:last-child {
+    border: none;
+}
+
+.trending {
+    grid-column: 2;
+    grid-row: 2;
+    background-color: white;
+    width: 320px;
+
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+    padding: 30px;
+    margin-top: 50px;
+    border-radius: 10px;
+    box-shadow: 2px 2px 6px 1px rgba(206, 206, 206, 1);
+
+}
+
+.trending-card {
+    display: flex;
+    gap: 16px;
+    align-items: center;
+
+}
+
+.trending-user p:last-child {
+    opacity: 0.6;
+}
+
+.trending-image>img {
+    height: 55px;
+    width: 55px;
+    border-radius: 30px;
 }
